# csi281Final

./: AudioFile.h  CMakeLists.txt  README.md  WAVFile.cpp  WAVFile.h  main.cpp
